--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,6 @@
 :root{
-
+  --text-primary: white;
+  --bg-primary: #2c2c2c;
 }
 
 *{
@@ -11,4 +12,8 @@ html,
 body{
   max-width: 100vw;
   overflow-x: hidden;
+  
+}
+body{
+  background-color: var(--bg-primary);
 }
